--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="score">积分</string>
     <string name="score_detail">积分明细</string>
     <string name="help_label">帮助</string>
+    <string name="score_list">积分排行榜</string>
 
     <!-- Login -->
     <string name="username">用户名</string>
