增加删除分享的文章

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -168,5 +168,6 @@
     <string name="share_article_link">Article Link</string>
     <string name="share_article_link_tip">eg：https://www.wanandroid.com</string>
     <string name="share_success">Share Success</string>
+    <string name="share_article_delete">Shared articles deleted</string>
 
 </resources>
