--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,5 +168,6 @@
     <string name="share_article_link">文章链接</string>
     <string name="share_article_link_tip">例如：https://www.wanandroid.com</string>
     <string name="share_success">分享成功</string>
+    <string name="share_article_delete">已删除分享的文章</string>
 
 </resources>
