`关于我们` 移动到 `设置` 页，修改一些小问题

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -171,5 +171,6 @@
     <string name="share_success">Share Success</string>
     <string name="share_article_delete">Shared articles deleted</string>
     <string name="audited">To be audited</string>
+    <string name="submit_ing">Submit...</string>
 
 </resources>
